# hackrx-gemini2

./: .gitignore  pyvenv.cfg  requirements.txt
ModelMind/: .env.template  README.md  main.py  pyproject.toml  replit.md  requirements.txt
ModelMind/app/: main.py  schemas.py
ModelMind/app/core/: embeddings.py  ingest.py  llm.py  retriever.py
ModelMind/attached_assets/: Pasted-You-are-an-expert-backend-engineer-and-prompt-to-code-generator-specializing-in-LLM-retrieval-syst-1754653193278_1754653193280.txt
ModelMind/tests/: test_api.py
